
UFTP 2.10.0 (released 2021 dd yyyy)
----------------------------------
 - update to log4j/2, logging config update recommended
 - update to securityLibrary 5.2.0
 - new feature: implement restart command ("REST")
 - fix: persistent sessions were removed even
   when still active
 - fix: handling of absolute vs relative directories, allow 
   creating sessions with a fixed base directory

UFTP 2.9.2 (released Nov 16 2020)
---------------------------------
 - fix: debian package now depends on "default-jre-headless"
 - fix: tgz bundle was was missing uftp.sh script

UFTP 2.9.1 (released Oct 16 2020)
---------------------------------
 - fix: FTP session starting directory was not correct in
   some cases

UFTP 2.9.0 (released Sep 21 2020)
---------------------------------
 - new feature: support for FTP proxies (DeleGate and Frox)
 - new feature: "persistent" sessions to allow mounting via
   'curlftpfs' where the login secret is re-used
   several times
 - simplify login handshake handling to better support
   login from non-UFTP clients
 - fix: stat'ing the "/" directory returned empty filename
   and thus listing "/" did not work
 - fix: client sent extra empty lines over the control
   channel
 - fix: less harsh timeouts for control socket communications
 - fix: use setresuid() for UID switching to fix problems
   with root-squash mouted file systems
 
UFTP 2.8.0 (released Jul 06 2020)
---------------------------------
 - new feature: session features can be limited 
   by authserver (e.g. to readonly access)
 - new feature: read public keys from configurable
   list of files (defaults to ~/.ssh/authorized_keys) (#61)
 - new feature: allow to blacklist writing to certain
   files (#62)
 
UFTP 2.7.1 (released Nov 4 2019)
--------------------------------
 - fix: files were not closed when receiving archive
   stream data, leading to a "too many open files" error

UFTP 2.7.0 (released Sept 25 2019)
----------------------------------