@@ -10,7 +10,7 @@
   <parent>
     <groupId>eu.unicore.uftp</groupId>
     <artifactId>uftp-parent</artifactId>
-    <version>2.10.0</version>
+    <version>2.11.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
